add payment contract and dploy
